...
                }
            }

            Group {
                switch favoriteState {
                case .favorite:
                    Button("Remove from Favorites") {
                        viewModel.removeFromFavorites()
                    }
                    .buttonStyle(.borderedProminent)

                case .notFavorite:
                    Button("Add to Favorites") {
                        viewModel.addToFavorites()
                    }
                    .buttonStyle(.borderedProminent)

                case .hidden:
                    EmptyView()
...
