...
            }
        }
        .toolbar {
            NavigationLink {
                SearchBooksScreen(viewModel: composer.makeSearchBooksViewModel())
            } label: {
                Image(systemName: "plus")
            }
        }
    }
}

#Preview {
...
